src/test/ui/parser/keyword-unsafe-as-identifier.stderr
error: expected pattern, found keyword `unsafe`
  --> $DIR/keyword-unsafe-as-identifier.rs:6:9
   |
LL |     let unsafe = "foo"; //~ error: expected pattern, found keyword `unsafe`
   |         ^^^^^^ expected pattern

error: aborting due to previous error

